--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="./styles/css/main.css">
-    <title>imtihon3</title>
+    <title>Collection</title>
 </head>
 <body>
 <header class="sticky-top" >
