--- a/search.html
+++ b/search.html
@@ -14,7 +14,7 @@
 <body class="bg-light">
 <header class="sticky-top">
     <div class="container">
-        <nav class="d-flex justify-content-between align-items-center">
+        <nav class="d-flex justify-content-between align-items-center" >
             <div class="sider">
                 <label for="aside"><i class="fa-solid fa-bars bars1"></i></label>
                 <input type="checkbox" id="aside" hidden>
@@ -42,7 +42,7 @@
         </nav>
     </div>
 </header>
-<div class="container py-5">
+<div class="container py-5" id="coll">
  <form id="head" class="d-flex">
      <input type="search" id="searchVal" class="w-100 d-block form-control">
  </form>
@@ -97,7 +97,7 @@
             <img src="./images/payments.png" alt="">
 
         </div>
-        <a href="#header" class="text-reset text-decoration-none btn">Scroll to top <i
+        <a href="#coll" class="text-reset text-decoration-none btn">Scroll to top <i
                 class="fa-solid fa-arrow-up"></i></a>
     </div>
 </footer>
